[workspace]
members = ["kash_macros"]

[package]
name = "kash"
version = "0.6.0"
authors = ["Omid Rad <omidmr@gmail.com>", "James Kominick <james@kominick.com>"]
description = "Function and method cache and memoization"
repository = "https://github.com/omid/kash"
documentation = "https://docs.rs/kash"
readme = "README.md"
categories = ["caching", "data-structures"]
keywords = ["cache", "memoize", "redis", "disk"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["moka/sync"]
async = ["moka/future"]
redis_store = [
    "dep:redis",
    "dep:r2d2",
    "dep:serde",
    "dep:rmp-serde",
    "kash_macros/redis_store",
]
redis_connection_manager = ["redis_store", "redis/connection-manager"]
redis_tokio = [
    "redis_store",
    "async",
    "redis/aio",
    "redis/tokio-comp",
    "redis/tls",
    "redis/tokio-native-tls-comp",
    "tokio",
]
redis_ahash = ["redis_store", "redis/ahash"]
disk_store = [
    "dep:sled",
    "dep:serde",
    "dep:rmp-serde",
    "dep:directories",
    "kash_macros/disk_store",
]

[dependencies]
async-trait = "0.1"
directories = { version = "6.0", optional = true }
kash_macros = { path = "kash_macros", version = "0.6" }
moka = "0.12"
# moka = { version = "0.12" , path = "../moka/" }
once_cell = "1"
r2d2 = { version = "0.8", optional = true }
redis = { version = "0.32", features = ["r2d2"], optional = true }
rmp-serde = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sled = { version = "0.34", optional = true }
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "time",
    "sync",
    "parking_lot",
], optional = true }
instant = "0.1"

[dev-dependencies]
copy_dir = "0.1"
googletest = "0.14"
serial_test = "3"
smartstring = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"

[[example]]
name = "redis"
required-features = ["redis_store"]

[[example]]
name = "redis-async"
required-features = ["async"]

[[example]]
name = "tokio"
required-features = ["async"]

[[example]]
name = "in_impl"
required-features = ["async"]

[[example]]
name = "disk"
required-features = ["disk_store"]

[lints.rust]
unsafe_code = { level = "forbid", priority = 2 }
rust_2018_idioms = "deny"
nonstandard-style = "deny"
future_incompatible = "deny"
#missing_docs = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

missing_panics_doc = "allow"
missing_errors_doc = "allow"
implicit_return = "allow"
single_call_fn = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
cast_sign_loss = "allow"
option_option = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"

## restrictions
unseparated_literal_suffix = "warn"
needless_raw_strings = "warn"
semicolon_inside_block = "warn"
self_named_module_files = "warn"
renamed_function_params = "warn"
unwrap_in_result = "warn"
# allow_attributes_without_reason = "warn"
assigning_clones = "warn"
if_then_some_else_none = "warn"
else_if_without_else = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
string_slice = "warn"
iter_over_hash_type = "warn"
wildcard_enum_match_arm = "warn"
arithmetic_side_effects = "warn"
float_arithmetic = "warn"
unwrap_used = "warn"
panic = "warn"
expect_used = "warn"
