[package]
name = "kash_macros"
version = "0.6.0"
authors = [
    "Omid Rad <omidmr@gmail.com>",
    "csos95 <csoscss@gmail.com>",
    "James Kominick <james@kominick.com>",
]
description = "Function and method cache and memoization"
repository = "https://github.com/omid/kash"
documentation = "https://docs.rs/kash"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[features]
redis_store = []
disk_store = []
