[package]
name = "kash_macros"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
redis_store = []
disk_store = []

[dependencies]
darling = "0.21"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
