[package]
name = "kash_proc_macro"
version = "0.1.0"
authors = [
    "Omid Rad <omidmr@gmail.com>",
    "csos95 <csoscss@gmail.com>",
    "James Kominick <james@kominick.com>",
]
description = "Generic cache implementations and simplified function memoization"
repository = "https://github.com/omid/kash"
documentation = "https://docs.rs/kash"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize", "lru"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"
darling = "0.20.8"
proc-macro2 = "1.0.49"
syn = "2.0.52"
