[package]
name = "kash_proc_macro"
version = "0.1.0"
authors = [
    "Omid Rad <omidmr@gmail.com>",
    "csos95 <csoscss@gmail.com>",
    "James Kominick <james@kominick.com>",
]
description = "Function and method cache and memoization"
repository = "https://github.com/omid/kash"
documentation = "https://docs.rs/kash"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize", "lru"]
license = "MIT"
edition = "2021"
rust-version = "1.76"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
